policies/pss-privilege-escalation/binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pss-privilege-escalation-deny.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/pss-privilege-escalation: deny
    objectSelector: {}
  policyName: pss-privilege-escalation.vap-library.com
  validationActions:
  - Deny
  - Audit
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: pss-privilege-escalation-warn.vap-library.com
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vap-library.com/pss-privilege-escalation: warn
    objectSelector: {}
  policyName: pss-privilege-escalation.vap-library.com
  validationActions:
    - Warn
